test(Lottoies) : lotties 반환된 리스트가 수정이 불가능인지 확인한다 으로 수정